# dl-lumbar-degenerative-diseases

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  任务书.md
apps/: streamlit_app.py
apps/streamlit/: Home.py  _app.py
artifacts/runs/: metrics.csv  predictions.csv
configs/data/: default.yaml
configs/deploy/: default.yaml
configs/eval/: default.yaml
configs/model/: default.yaml
configs/train/: baseline_v2_class_weight_only.yaml  baseline_v2_light_aug.yaml  baseline_v2_rebalance_off.yaml  default.yaml  overfit_debug.yaml
docs/plans/: 2026-04-09-lumbar-dd-implementation.md  2026-04-12-baseline-diagnosis-design.md  2026-04-12-baseline-diagnosis.md  2026-04-12-collapse-recovery-design.md  2026-04-12-collapse-recovery.md  2026-04-12-generalization-next-step.md  2026-04-14-seed-sweep-optimization.md  2026-04-19-streamlit-minimal-inference-design.md  2026-04-19-streamlit-minimal-inference.md
reports/: thesis_final_report.md  thesis_model_comparison.md
reports/figures/: model_ranking.csv  model_ranking.json
scripts/: download_best_model.sh  healthcheck.py  run_thesis_experiments.sh  run_training_foreground.sh  server_train.sh  sync_to_server.sh  windows_bootstrap.ps1
src/dl_lumbar_dd/: cli.py  config.py  constants.py  healthcheck.py
tests/cli/: test_eda_preprocess_cli.py  test_healthcheck_cli.py  test_streamlit_app.py
tests/data/: __init__.py  helpers.py  test_dicom.py  test_metadata.py  test_splits.py
tests/eval/: test_comparison.py  test_metrics.py  test_plots.py
tests/inference/: test_service.py
tests/models/: test_registry.py
(+435 files in other folders)
