[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dl-lumbar-dd"
version = "0.1.0"
description = "Deep learning pipeline for lumbar degenerative disease classification"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "pydicom>=2.4",
  "opencv-python-headless>=4.10",
  "pillow>=10.4",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.24",
  "streamlit>=1.44",
  "torch>=2.4",
  "torchvision>=0.19",
  "timm>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
  "mypy>=1.15",
]
windows-cpu = [
  "onnxruntime>=1.21; platform_system == 'Windows'",
]
windows-gpu = [
  "onnxruntime-gpu>=1.21; platform_system == 'Windows'",
]

[project.scripts]
lumbar-cli = "dl_lumbar_dd.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/dl_lumbar_dd"]
